--- a/pom.xml
+++ b/pom.xml
@@ -9,19 +9,45 @@
     <version>1.0</version>
 
     <dependencies>
+
         <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj</artifactId>
             <version>2.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.teleal.cling</groupId>
+            <artifactId>cling-core</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.teleal.cling</groupId>
+            <artifactId>cling-support</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
+
         <repository>
             <id>caprica</id>
             <name>Caprica Software</name>
             <url>http://www.capricasoftware.co.uk/repo</url>
         </repository>
+
+
+        <repository>
+            <id>teleal-repo</id>
+            <url>http://teleal.org/m2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+
+
     </repositories>
 
 
